--- a/src/main/resources/templates/mentorship-posts/show.html
+++ b/src/main/resources/templates/mentorship-posts/show.html
@@ -7,6 +7,7 @@
     <div th:id="'post-' + ${post.id}"></div>
         <h1 th:text = "${post.title}"></h1>
         <p th:text = "${post.body}"></p>
+        <p th:text = "${post.answer}"></p>
         <p th:text = "${post.user.email}"></p>
 
         <div sec:authorize = "isAuthenticated()">
