--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -7,60 +7,109 @@
 </head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
-<h1>Most Recent Interview Questions</h1>
-<div th:each="post : ${interviewQuestionsList}">
-    <div th:id="'post-' + ${post.id}"></div>
-    <h3 th:text = "${post.title}"></h3>
-    <h4 th:text = "${post.dateTime}"></h4>
-    <p th:text = "${post.body}"></p>
-    <p th:text = "${post.user.username}"></p>
-    <img th:if="${post.imageURLList != null}" th:text="${post.imageURLList[0].url}" alt="post-image">
-
-    <div sec:authorize = "isAuthenticated()">
-        <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>
-        <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>
-        <div th:each="postRating : ${post.ratingList}">
-            <p th:text="${postRating.rating}"></p>
+<div class="container row">
+<!--    Interview-->
+    <div class="col-4">
+        <h3>Most Recent Interview Questions</h3>
+        <div th:each="post : ${interviewQuestionsList}">
+            <div th:id="'post-' + ${post.id}">
+                <h4 th:text = "${post.title}"></h4>
+                <p th:text = "${post.dateTime}"></p>
+                <p th:text = "${post.body}"></p>
+                <p th:text = "${post.user.username}"></p>
+                <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
+                    <img th:src="${post.imageURLList[0].url}" alt="post-image">
+                </div>
+                <div sec:authorize = "isAuthenticated()">
+                    <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>
+                    <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>
+                    <div th:each="postRating : ${post.ratingList}">
+                        <p th:text="${postRating.rating}"></p>
+                    </div>
+                    <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
+                </div>
+                <div th:each="comment : ${post.commentList}">
+                    <p th:text = "${comment.body}"></p>
+                </div>
+                <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+                <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                <div th:if="${user.id == post.user.id}">
+                    <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
+                    <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
+                </div>
+            </div>
         </div>
-        <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
     </div>
-    <div th:each="comment : ${post.commentList}">
-        <p th:text = "${comment.body}"></p>
-    </div>
-    <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-    <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
-    <div th:if="${user.id == post.user.id}">
-        <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
-        <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
-    </div>
-</div>
-</div>
-<h1>Most Recent Mentorship Posts</h1>
-<div th:each="post : ${mentorshipPostsList}">
-    <div th:id="'post-' + ${post.id}"></div>
-    <h1 th:text = "${post.title}"></h1>
-    <p th:text = "${post.body}"></p>
-    <p th:text = "${post.user.email}"></p>
-
-    <div sec:authorize = "isAuthenticated()">
-        <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>
-        <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>
-        <div th:each="postRating : ${post.ratingList}">
-            <p th:text="${postRating.rating}"></p>
+<!--    End Interview-->
+<!--    Mentorship-->
+    <div class="col-4">
+        <h3>Most Recent Mentorship Posts</h3>
+        <div th:each="post : ${mentorshipPostsList}">
+            <div th:id="'post-' + ${post.id}">
+                <h4 th:text = "${post.title}"></h4>
+                <p th:text = "${post.dateTime}"></p>
+                <p th:text = "${post.body}"></p>
+                <p th:text = "${post.user.username}"></p>
+                <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
+                    <img th:src="${post.imageURLList[0].url}" alt="post-image">
+                </div>
+                <div sec:authorize = "isAuthenticated()">
+                    <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>
+                    <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>
+                    <div th:each="postRating : ${post.ratingList}">
+                        <p th:text="${postRating.rating}"></p>
+                    </div>
+                    <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
+                </div>
+                <div th:each="comment : ${post.commentList}">
+                    <p th:text = "${comment.body}"></p>
+                </div>
+                <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+                <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                <div th:if="${user.id == post.user.id}">
+                    <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
+                    <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
+                </div>
+            </div>
         </div>
-        <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
     </div>
-    <div th:each="comment : ${post.commentList}">
-        <p th:text = "${comment.body}"></p>
+<!--    End Mentorship-->
+<!--    Job-->
+    <div class="col-4">
+        <h3>Most Recent Job Postings</h3>
+        <div th:each="post : ${jobPostingsList}">
+            <div th:id="'post-' + ${post.id}">
+                <h4 th:text = "${post.title}"></h4>
+                <p th:text = "${post.dateTime}"></p>
+                <p th:text = "${post.body}"></p>
+                <p th:text = "${post.user.username}"></p>
+                <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
+                    <img th:src="${post.imageURLList[0].url}" alt="post-image">
+                </div>
+                <div sec:authorize = "isAuthenticated()">
+                    <button class="upvote-button" th:id="'upvote-' + ${post.id}">Upvote JS</button>
+                    <button class="downvote-button" th:id="'downvote-' + ${post.id}">Downvote JS</button>
+                    <div th:each="postRating : ${post.ratingList}">
+                        <p th:text="${postRating.rating}"></p>
+                    </div>
+                    <p>Rating Total: <span th:text = "${post.getRatingTotal()}"></span></p>
+                </div>
+                <div th:each="comment : ${post.commentList}">
+                    <p th:text = "${comment.body}"></p>
+                </div>
+                <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+                <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                <div th:if="${user.id == post.user.id}">
+                    <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
+                    <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-    <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
-    <div th:if="${user.id == post.user.id}">
-        <a th:href="@{|/mentorship-posts/edit/${post.id}|}"><button>Edit Post</button></a>
-        <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete Post</button>
-    </div>
+<!--    End Job-->
 </div>
-</div>
+
+
 Interview Questions:
 <a th:href="@{|/interview-questions/show|}"><button>Interview Questions</button></a>
 <a th:href="@{|/interview-questions/create|}"><button>Interview Create</button></a>
