--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -8,6 +8,18 @@
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <div class="container row">
+    <div class="col-4">
+        <a th:href="@{|/interview-questions/show|}"><button class="btn btn-primary">Interview Questions</button></a>
+        <a th:href="@{|/interview-questions/create|}"><button class="btn btn-primary">Interview Create</button></a>
+    </div>
+    <div class="col-4">
+        <a th:href="@{|/mentorship-posts/show|}"><button class="btn btn-primary">Mentorship Posts</button></a>
+        <a th:href="@{|/mentorship-posts/create|}"><button class="btn btn-primary">Mentorship Create</button></a>
+    </div>
+    <div class="col-4">
+        <a th:href="@{|/job-postings/show|}"><button class="btn btn-primary">Job Postings</button></a>
+        <a th:href="@{|/job-postings/create|}"><button class="btn btn-primary">Job Postings Create</button></a>
+    </div>
 <!--    Interview-->
     <div class="col-4">
         <h3>Most Recent Interview Questions</h3>
@@ -108,26 +120,6 @@
     </div>
 <!--    End Job-->
 </div>
-
-
-Interview Questions:
-<a th:href="@{|/interview-questions/show|}"><button>Interview Questions</button></a>
-<a th:href="@{|/interview-questions/create|}"><button>Interview Create</button></a>
-<br>
-<br>
-<br>
-Mentorship Posts:
-<a th:href="@{|/mentorship-posts/show|}"><button>Mentorship Posts</button></a>
-<a th:href="@{|/mentorship-posts/create|}"><button>Mentorship Create</button></a>
-<br>
-<br>
-<br>
-Job Postings:
-<a th:href="@{|/job-postings/show|}"><button>Job Postings</button></a>
-<a th:href="@{|/job-postings/create|}"><button>Job Postings Create</button></a>
-<br>
-<br>
-<br>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 </body>
 </html>
