--- a/src/main/resources/templates/job-postings/show.html
+++ b/src/main/resources/templates/job-postings/show.html
@@ -19,8 +19,13 @@
 
     <div th:each="comment : ${post.commentList}">
         <p th:text = "${comment.body}"></p>
+        <div sec:authorize = "isAuthenticated()">
+            <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">Upvote JS</button>
+            <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">Downvote JS</button>
+        </div>
         <p>Comment Rating Total: <span th:text = "${comment.getRatingTotal()}"></span></p>
     </div>
+
     <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
     <button class="add-comment-button" th:id="'add-comment-button-' + ${post.id}">Comment</button>
     <div sec:authorize = "isAuthenticated()">
