--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -3,28 +3,32 @@
 <head th:replace="fragments/header.html :: header(title = 'Register your account!')"></head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
-<h1>Register your account</h1>
+<h1 class="text-center" >Register your account</h1>
 
 
 
 <form th:action="@{/register}" method="POST" th:object="${user}">
+    <div class="card register-mainBox">
+        <div class="card-body box-box">
+
+
     <label for="firstName">First Name</label>
-    <input id="firstName" th:field="*{firstName}"/>
+    <input  id="firstName" class="form-control" th:field="*{firstName}"/>
     <br/>
     <label for="lastName">Last Name</label>
-    <input id="lastName" th:field="*{lastName}"/>
+    <input id="lastName" class="form-control" th:field="*{lastName}"/>
     <br/>
     <label for="username">Username</label>
-    <input id="username" th:field="*{username}"/>
+    <input id="username" class="form-control" th:field="*{username}"/>
     <br/>
     <label for="email">Email</label>
-    <input id="email" th:field="*{email}"/>
+    <input id="email" class="form-control" placeholder="Enter email" th:field="*{email}"/>
     <br/>
     <label for="password">Password</label>
-    <input id="password" type="password" th:field="*{password}"/>
+    <input id="password" type="password" class="form-control" th:field="*{password}"/>
     <br/>
     <label for="bio">Personal Bio</label>
-    <textarea id="bio" th:field="*{bio}" cols="30" rows="10" maxlength="250" placeholder="Please type a brief summary that is less than 250 words."></textarea>
+    <textarea class="form-control" id="bio" th:field="*{bio}" cols="30" rows="10" maxlength="250" placeholder="Please type a brief summary that is less than 250 words."></textarea>
     <br/>
     <button class="button photo-upload" type="button" id="photo-picker">Upload Profile Image</button>
     <input type="hidden" class="" id="photo-upload" name="photoURL">
@@ -48,6 +52,8 @@
     </div>
     <button class="add-skill-button" id="add-skill-button">Add Another Skill</button>
     <input value="Sign me up!" type="submit" />
+    </div>
+    </div>
 </form>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 </body>
