--- a/src/main/resources/templates/talkjs/test.html
+++ b/src/main/resources/templates/talkjs/test.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header.html :: header(title = 'Test Talk JS')"></head>
+<head>
+    <th:block th:include="fragments/header.html :: header(title = 'Test Talk JS')"/>
+    <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+</head>
+
 <body>
 <input id="user-id" type="hidden" th:value="${user.id}">
 <input id="username" type="hidden" th:value="${user.username}">
@@ -31,7 +35,7 @@
             // photoUrl: document.getElementById("photo-url").value,
         });
         window.talkSession = new Talk.Session({
-            appId: "tGg3hIao",
+            appId: document.querySelector('meta.talkJSAppId').content,
             me: me
         });
         const other = new Talk.User({
