--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header.html :: header(title = 'Register your account!')"></head>
+<head>
+    <th:block th:include="fragments/header.html :: header(title = 'Register Account')"/>
+    <meta class="filestackKey" th:content="${filestackKey}"/>
+</head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
 <h1>Register your account</h1>
