--- a/src/main/resources/templates/whiteboard/whiteboard.html
+++ b/src/main/resources/templates/whiteboard/whiteboard.html
@@ -33,9 +33,9 @@
     function init() {
         //// Initialize Firebase.
         var config = {
-            apiKey: document.querySelector('meta.firebasekKey').content,
-            authDomain: "firepad-tests.firebaseapp.com",
-            databaseURL: "https://firepad-tests.firebaseio.com"
+            apiKey: document.querySelector('meta.firebaseKey').content,
+            authDomain: "codeon-49481.firebaseapp.com",
+            databaseURL: "https://codeon-49481.firebaseio.com"
         };
         firebase.initializeApp(config);
 
