--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -1,7 +1,24 @@
-body {
-    background-color: lightblue;
-}
 h1 {
     color:  blue;
+
+}
+.register-mainBox{
+    border: none !important;
+    margin-right: 15% !important;
+    margin-left: 15% !important;
+}
+
+.register-box{
+    background-color: rgb(235, 235, 235);
+    margin-top: 5%;
+    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+}
+
+.box-box{
+    margin-top: 2%;
+    background-color: rgb(235, 235, 235);;
+    border: none !important;
+    margin-left: 20%;
+    margin-right: 20%;
 
 }
