--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -22,3 +22,14 @@ h1 {
     margin-right: 20%;
 
 }
+
+/*login page*/
+.login-frame{
+    background-color: #c4d5f2;
+    padding: 1%;
+    padding-left: -5%;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 10%;
+    box-shadow: 0px 7px 29px 10px rgba(0,0,0,1);
+}
