thought i already committed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,32 +4,8 @@
 <body>
 
 <h1>Welcome to CodeOn</h1>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!--this is the page the will see when they get to CodeOn.com this is where
+the parallax will go -->
 
 <!--<nav th:replace="fragments/navbar.html :: navbar"></nav>-->
 <!--Interview Questions:-->
