added video and font

--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -1,5 +1,5 @@
 h1 {
-    color:  blue;
+    color:  black;
 
 }
 .register-mainBox{
@@ -21,6 +21,9 @@ h1 {
     margin-left: 20%;
     margin-right: 20%;
 
+}
+#logo{
+    font-family: 'Orbitron', sans-serif;
 }
 
 /*login page*/
