--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments/header.html :: header(title = 'Codeon')"></head>
 <body>
-
+<nav th:replace="fragments/navbar.html :: navbar"></nav>
 <h1>Welcome to CodeOn</h1>
 <!--this is the page the will see when they get to CodeOn.com this is where
 the parallax will go -->
+<header class="d-none d-lg-block">
+    <div class="overlay"></div>
+    <video autoplay="autoplay" muted="muted" loop="loop">
+        <source src="https://www.videvo.net/videvo_files/converted/2016_04/preview/160330_1_Typing1_Mpeg4_4K.mov32174.webm" type="video/webm">
+    </video>
+    <div class="container h-100">
+        <div class="d-flex h-100 text-center align-items-center">
+            <div class="w-100 text-white">
+                <h1 class="display-3" id ="logo" style="font-size: 12em">CodeOn</h1>
+            </div>
+        </div>
+    </div>
+</header>
 
 <!--<nav th:replace="fragments/navbar.html :: navbar"></nav>-->
 <!--Interview Questions:-->
